tests/baselines/reference/indexWithUndefinedAndNull.errors.txt
tests/cases/compiler/indexWithUndefinedAndNull.ts(9,21): error TS2538: Type 'undefined' cannot be used as an index type.
tests/cases/compiler/indexWithUndefinedAndNull.ts(10,9): error TS2538: Type 'null' cannot be used as an index type.
tests/cases/compiler/indexWithUndefinedAndNull.ts(11,21): error TS2538: Type 'undefined' cannot be used as an index type.
tests/cases/compiler/indexWithUndefinedAndNull.ts(12,9): error TS2538: Type 'null' cannot be used as an index type.


==== tests/cases/compiler/indexWithUndefinedAndNull.ts (4 errors) ====
    interface N {
        [n: number]: string;
    }
    interface S {
        [s: string]: number;
    }
    let n: N;
    let s: S;
    let str: string = n[undefined];
                        ~~~~~~~~~
!!! error TS2538: Type 'undefined' cannot be used as an index type.
    str = n[null];
            ~~~~
!!! error TS2538: Type 'null' cannot be used as an index type.
    let num: number = s[undefined];
                        ~~~~~~~~~
!!! error TS2538: Type 'undefined' cannot be used as an index type.
    num = s[null];
            ~~~~
!!! error TS2538: Type 'null' cannot be used as an index type.
    